   It is now can be used again as output/input of any step. Many errors are fixed.
3. Add possibility to hide TGo4EventElement members from tree viewer and event
   viewer. This makes look of data structures, especially in composite events,
   much more clean. Default is off, can be changed via Settings->Preferences menu.
   Implemented for both qt3 and qt4 version.          

Changes in Go4 v4.4.3 (March 2011)
1. Implement proper Ctrl-C handler for Windows platform
2. Fix several problems with settings savings. There is 
   known issue with dockable widgets (http://bugreports.qt.nokia.com/browse/QTBUG-16252),
   therefore qt4.7.0 and 4.7.1 has a problem to correctly restore browser/logger position. 
3. Adjust to Miscrosoft Visual Studio 2010.
4. Bugfix in dabc monitor: table of DAQ nodes were set up with sorting enabled.
   Added some flags to protect table rendering
5. Extension of TGo4LockGuard class to force locking even when no ROOT thread exists.
   Important when race condition code shall be protected against foreign pthreads (e.g. DIM)  
6. Adjusted to new version of gSTORE RFIO/ lmd event input
7. Implement -print argument for go4analysis program. This allows to print any kind
   of event on the terminal - even without actual user analysis. For instance:
      go4analysis -stream r4-4 -number 10 -print
   will print 10 events from MBS stream server r4-4. Print also works with user source.
8. Implement TGo4FileStore::SetMaxTreeSize method to let configure size of created tree.
   Add -maxtreesize argument to go4analysis to change value in batch.
9. Use gStyle->GetStatFormat() for formatting of fitter parameters output.
   Add possibility to configure this format from GUI via Settings/Panel defaults/Printf menu.
   Implemented in qt3/qt4 versions. 
10.Add possibility to display/monitor TLatex object from analysis (qt3/qt4).

Changes in Go4 v4.4.2 (October 2010)
1. Fix analysis crash when autosave file cannot be created in specified locations. 